--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "./components/share-image";
 @import "./components/grid";
 @import "./components/app-panel";
+@import "./components/item-ball";
 
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
