--- a/public/board-tabs.css
+++ b/public/board-tabs.css
@@ -1,5 +1,4 @@
 .n-board-tabs {
-  background-color: var(--header-background);
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
@@ -7,7 +6,10 @@
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
   transition: all 0.2s ease-in-out; }
   .n-board-tabs:not([data-scroll="0"]) {
-    box-shadow: inset 3px 0px 4px var(--color-faded-1); }
+    box-shadow: inset 2px 0px 1px var(--color-faded); }
+  .n-board-tabs .zmdi {
+    color: var(--color-inverse-2);
+    z-index: 10; }
   .n-board-tabs .tab {
     color: var(--color-inverse-2);
     border: none;
@@ -22,8 +24,17 @@
     display: flex;
     justify-content: center;
     align-items: center; }
-    .n-board-tabs .tab.active {
-      border-bottom: solid 2px var(--color-primary-bright); }
+    .n-board-tabs .tab.active:before {
+      content: "";
+      position: absolute;
+      top: 45px;
+      z-index: 100;
+      left: 0;
+      right: 0;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--color-primary-bright);
+      box-shadow: 0px 2px 10px rgba(49, 158, 215, 0.4); }
     .n-board-tabs .tab:last-child.active {
       border-bottom: none; }
     .n-board-tabs .tab:after {
@@ -37,6 +48,4 @@
       opacity: 0;
       transition: all 0.2s ease-in-out; }
     .n-board-tabs .tab:active:after {
-      background-color: var(--color-primary-bright);
-      opacity: 0.5;
       transition: all 0.2s ease-in-out; }
