--- a/public/main.css
+++ b/public/main.css
@@ -5153,7 +5153,13 @@ body {
   --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
   --header-background: #fff;
-  --modal-border: solid 1px rgba(0, 0, 0, 0.12); }
+  --modal-border: solid 1px rgba(0, 0, 0, 0.12);
+  --header-fade: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 35%,
+    rgba(255, 255, 255, 0.5886729691876751) 76%,
+    rgba(255, 255, 255, 0) 100%
+  ); }
 
 body.test * {
   border: solid 1px rgba(255, 0, 0, 0.6) !important; }
@@ -5216,6 +5222,7 @@ body.offline .main-content:before {
   z-index: 2000; }
 
 body.theme-dark {
+  --header-fade: linear-gradient(180deg, rgba(0, 0, 0, 1) 35%, rgba(0, 0, 0, 0) 100%);
   --header-background: #111;
   --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
@@ -5523,7 +5530,6 @@ select {
     transform: translateY(-200px); }
 
 .n-board-tabs {
-  background-color: var(--header-background);
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
@@ -5531,7 +5537,10 @@ select {
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
   transition: all 0.2s ease-in-out; }
   .n-board-tabs:not([data-scroll="0"]) {
-    box-shadow: inset 3px 0px 4px var(--color-faded-1); }
+    box-shadow: inset 2px 0px 1px var(--color-faded); }
+  .n-board-tabs .zmdi {
+    color: var(--color-inverse-2);
+    z-index: 10; }
   .n-board-tabs .tab {
     color: var(--color-inverse-2);
     border: none;
@@ -5546,8 +5555,17 @@ select {
     display: flex;
     justify-content: center;
     align-items: center; }
-    .n-board-tabs .tab.active {
-      border-bottom: solid 2px var(--color-primary-bright); }
+    .n-board-tabs .tab.active:before {
+      content: "";
+      position: absolute;
+      top: 45px;
+      z-index: 100;
+      left: 0;
+      right: 0;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--color-primary-bright);
+      box-shadow: 0px 2px 10px rgba(49, 158, 215, 0.4); }
     .n-board-tabs .tab:last-child.active {
       border-bottom: none; }
     .n-board-tabs .tab:after {
@@ -5561,8 +5579,6 @@ select {
       opacity: 0;
       transition: all 0.2s ease-in-out; }
     .n-board-tabs .tab:active:after {
-      background-color: var(--color-primary-bright);
-      opacity: 0.5;
       transition: all 0.2s ease-in-out; }
 
 .full-screen {
