Moving the Avatar/Ball to its own component
This way we can easily use it in other UI's

--- a/src/scss/components/item-ball.scss
+++ b/src/scss/components/item-ball.scss
@@ -62,46 +62,46 @@ $size: $trackerBallSize;
     color: var(--color-green);
   }
 
-  .avatar {
-    background-size: cover;
-    background-position: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  .letter {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    z-index: 102;
-    font-size: $size * 0.5;
-    // text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    color: rgba(0, 0, 0, 0.8);
-    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.5);
-    &.emoji-letter {
-      color: rgba(0, 0, 0, 1);
-    }
-  }
-  .letter.just-letter {
-    font-size: $size * 0.4 !important;
-  }
+  // .avatar {
+  //   background-size: cover;
+  //   background-position: center;
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  // }
+  // .letter {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   text-align: center;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   font-weight: bold;
+  //   z-index: 102;
+  //   font-size: $size * 0.5;
+  //   // text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  //   color: rgba(0, 0, 0, 0.8);
+  //   text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.5);
+  //   &.emoji-letter {
+  //     color: rgba(0, 0, 0, 1);
+  //   }
+  // }
+  // .letter.just-letter {
+  //   font-size: $size * 0.4 !important;
+  // }
 
-  .dymoji-wrap {
-    position: absolute !important;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-  }
+  // .dymoji-wrap {
+  //   position: absolute !important;
+  //   top: 0;
+  //   bottom: 0;
+  //   right: 0;
+  //   left: 0;
+  // }
 
   .countdown {
     position: absolute;
