--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -46,6 +46,7 @@ input[type="password"] {
     box-shadow: none !important;
   }
 }
+.form-control,
 input.form-control,
 select.form-control {
   border-radius: 0.4rem !important;
