Input component / search bar work

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -44,6 +44,7 @@ input[type="password"] {
 .form-control {
   &:focus {
     box-shadow: none !important;
+    background-color: var(--color-solid);
   }
 }
 .form-control,
