--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -56,6 +56,8 @@ body {
   --color-background-selected: #{rgba($primary, 0.1)};
   --color-translucent: rgba(255, 255, 255, 0.89);
 
+  --input-background: #eee;
+
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
@@ -114,6 +116,7 @@ body.test {
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
 
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
+  --input-background: #333;
 
   --color-translucent: rgba(0, 0, 0, 0.79);
 
