--- a/public/main.css
+++ b/public/main.css
@@ -5147,7 +5147,7 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
   --color-translucent: rgba(255, 255, 255, 0.89);
-  --input-background: #eee;
+  --input-background: #fff;
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
@@ -5252,7 +5252,7 @@ body.theme-dark {
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
-  --input-background: #333;
+  --input-background: #000;
   --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
