--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -98,6 +98,12 @@ TODO: Organize main into components or containers.
 .opacity-3 {
   opacity: 0.3;
 }
+.opacity-4 {
+  opacity: 0.4;
+}
+.opacity-5 {
+  opacity: 0.5;
+}
 
 .container-sm {
   max-width: 800px;
