--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -15,6 +15,13 @@
     }
   }
 
+  &.in {
+    &.hidden {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+  }
+
   &.up {
     &.hidden {
       opacity: 0;
