--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -72,6 +72,8 @@ body {
     rgba(240, 240, 240, 0.5886729691876751) 76%,
     rgba(240, 240, 240, 0) 100%
   );
+
+  --footer-fade: linear-gradient(180deg, rgba(240, 240, 240, 0) 10%, rgba(240, 240, 240, 0.9) 30%, rgba(240, 240, 240, 1) 100%);
 }
 
 body.test {
@@ -86,6 +88,8 @@ body.test {
 
 @mixin darkmode {
   --header-fade: linear-gradient(180deg, rgba(20, 20, 20, 1) 35%, rgba(20, 20, 20, 0) 100%);
+  --footer-fade: linear-gradient(0deg, rgba(10, 10, 10, 1) 52%, rgba(10, 10, 10, 0.711922268907563) 72%, rgba(10, 10, 10, 0) 100%);
+
   --header-background: #111;
   --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
