--- a/public/item-ball.css
+++ b/public/item-ball.css
@@ -40,7 +40,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     color: var(--color-inverse);
-    margin-top: 10px; }
+    margin-top: 10px;
+    line-height: 1rem; }
   .item-ball:active {
     transform: scale(0.9); }
     .item-ball:active .avatar {
