Flattening the footer

--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -74,6 +74,7 @@ body {
   );
 
   --footer-fade: linear-gradient(180deg, rgba(240, 240, 240, 0) 10%, rgba(240, 240, 240, 0.9) 30%, rgba(240, 240, 240, 1) 100%);
+  --footer-background: rgba(254, 254, 254, 1);
 }
 
 body.test {
@@ -88,6 +89,7 @@ body.test {
 
 @mixin darkmode {
   --header-fade: linear-gradient(180deg, rgba(20, 20, 20, 1) 35%, rgba(20, 20, 20, 0) 100%);
+  --footer-background: rgba(10, 10, 10, 1);
   --footer-fade: linear-gradient(0deg, rgba(10, 10, 10, 1) 52%, rgba(10, 10, 10, 0.711922268907563) 72%, rgba(10, 10, 10, 0) 100%);
 
   --header-background: #111;
