--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -1,4 +1,5 @@
 input[type="text"],
+input[type="email"],
 input[type="number"],
 input[type="password"] {
   background-color: var(--color-input-background);
