--- a/public/main.css
+++ b/public/main.css
@@ -5147,7 +5147,8 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
   --color-translucent: rgba(255, 255, 255, 0.89);
-  --input-background: #fff;
+  --input-background: #eee;
+  --input-focus-background: #fff;
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
@@ -5256,7 +5257,8 @@ body.theme-dark {
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
-  --input-background: #000;
+  --input-background: #111;
+  --input-focus-background: #000;
   --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
@@ -5395,6 +5397,7 @@ body.theme-dark {
   font-size: 1.3rem !important; }
 
 input[type="text"],
+input[type="email"],
 input[type="number"],
 input[type="password"] {
   background-color: var(--color-input-background);
@@ -5406,6 +5409,7 @@ input[type="password"] {
   padding: 6px;
   color: var(--color-inverse); }
   input[type="text"]:focus,
+  input[type="email"]:focus,
   input[type="number"]:focus,
   input[type="password"]:focus {
     background-color: var(--color-input-background);
