--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -56,7 +56,8 @@ body {
   --color-background-selected: #{rgba($primary, 0.1)};
   --color-translucent: rgba(255, 255, 255, 0.89);
 
-  --input-background: #fff;
+  --input-background: #eee;
+  --input-focus-background: #fff;
 
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
@@ -122,7 +123,8 @@ body.test {
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
 
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
-  --input-background: #000;
+  --input-background: #111;
+  --input-focus-background: #000;
 
   --color-translucent: rgba(0, 0, 0, 0.79);
 
