--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -197,6 +197,16 @@
 
 .n-list {
   margin-bottom: 16px;
+  border-radius: 6px;
+  overflow: hidden;
+  .n-item:first-child {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+  }
+  .n-item:last-child {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
 }
 
 .border-bottom {
