--- a/public/main.css
+++ b/public/main.css
@@ -6396,6 +6396,48 @@ aside.n-panel {
     right: 20%;
     z-index: 202; }
 
+.n-toolbar-grid {
+  color: var(--color-inverse);
+  display: grid;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 1fr;
+  height: 100%;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: calc(100% - 20px); }
+
+.n-toolbar-grid .left {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  grid-area: 1 / 1 / 2 / 2;
+  justify-content: center; }
+
+.n-toolbar-grid .main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  grid-area: 1 / 2 / 2 / 3;
+  justify-content: center; }
+
+.n-toolbar-grid .main h1,
+.n-toolbar-grid .main .title {
+  font-size: 1.1rem;
+  font-weight: bold;
+  line-height: 1.12rem;
+  margin: 2px;
+  padding: 0;
+  text-align: center; }
+
+.n-toolbar-grid .right {
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  grid-area: 1 / 3 / 2 / 4;
+  justify-content: center; }
+
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
 TODO: Organize main into components or containers. 
@@ -6587,42 +6629,8 @@ TODO: Organize main into components or containers.
   border-bottom: dotted 1px var(--color-primary-bright);
   color: var(--color-primary-bright); }
 
-.n-toolbar-grid {
-  display: grid;
-  height: 100%;
-  width: 100%;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  margin-left: -10px;
-  margin-right: -10px;
-  color: var(--color-inverse); }
-  .n-toolbar-grid .btn {
-    color: var(--color-inverse-1); }
-  .n-toolbar-grid .left {
-    grid-area: 1 / 1 / 2 / 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; }
-  .n-toolbar-grid .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-area: 1 / 2 / 2 / 3; }
-    .n-toolbar-grid .main.title,
-    .n-toolbar-grid .main .title {
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.1rem; }
-  .n-toolbar-grid .right {
-    grid-area: 1 / 3 / 2 / 4;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center; }
+.n-toolbar-grid .btn {
+  color: var(--color-inverse-1); }
 
 .card {
   border-radius: 0.5rem;
