--- a/public/main.css
+++ b/public/main.css
@@ -5667,12 +5667,12 @@ body.scrolling .mini-map {
 .mini-map {
   position: fixed;
   bottom: 70px;
-  right: 26px;
+  left: 26px;
   height: 100px;
   width: 100px;
   transition: all 0.2s ease-in-out;
   border-radius: 20px;
-  box-shadow: 0px 4px 9px -2px rgba(0, 0, 0, 0.4);
+  box-shadow: var(--box-shadow-float);
   background-color: var(--color-solid);
   overflow: hidden; }
   .mini-map .location-name {
