--- a/public/toolbar-grid.css
+++ b/public/toolbar-grid.css
@@ -8,7 +8,11 @@
   height: 100%;
   margin-left: 10px;
   margin-right: 10px;
-  width: calc(100% - 20px); }
+  width: calc(100% - 20px);
+  min-height: 50px; }
+
+.n-toolbar-grid.lg {
+  min-height: 50px; }
 
 .n-toolbar-grid .left {
   align-items: center;
