--- a/src/scss/components/toolbar-grid.scss
+++ b/src/scss/components/toolbar-grid.scss
@@ -9,7 +9,13 @@
   margin-left: 10px;
   margin-right: 10px;
   width: calc(100% - 20px);
+  min-height: 50px;
 }
+
+.n-toolbar-grid.lg {
+  min-height: 50px;
+}
+
 .n-toolbar-grid .left {
   align-items: center;
   display: flex;
